# Cluster

./: .editorconfig  .gitignore  .pdm-python  pyproject.toml
lightning_logs/version_100/: metrics.csv
lightning_logs/version_101/: metrics.csv
lightning_logs/version_102/: metrics.csv
lightning_logs/version_104/: metrics.csv
lightning_logs/version_25/: metrics.csv
lightning_logs/version_26/: metrics.csv
lightning_logs/version_33/: metrics.csv
lightning_logs/version_34/: metrics.csv
lightning_logs/version_35/: metrics.csv
lightning_logs/version_38/: hparams.yaml
lightning_logs/version_41/: metrics.csv
lightning_logs/version_66/: metrics.csv
lightning_logs/version_84/: metrics.csv
lightning_logs/version_85/: metrics.csv
lightning_logs/version_86/: metrics.csv
lightning_logs/version_87/: metrics.csv
lightning_logs/version_88/: metrics.csv
lightning_logs/version_92/: metrics.csv
lightning_logs/version_94/: metrics.csv
lightning_logs/version_95/: metrics.csv
lightning_logs/version_96/: metrics.csv
lightning_logs/version_97/: metrics.csv
lightning_logs/version_98/: metrics.csv
lightning_logs/version_99/: metrics.csv
scripts/: run-clustering-sweeps.sh
scripts/slurm/: run-cluster-sweep-parallel.sh  run-cluster-sweep.sh  run-clustering.sh  run_best_models.sh  train-model.sh
scripts/sweeps/: attention_based_sweep.yaml  cluster_sweep_pca.yaml  cluster_sweep_umap.yaml  sweep_classifier.yaml
src/mtl_cluster/: cluster_sweep.py  clustering.py  dump_model_args.py  get_model_f1.py  get_wand_cluster_stats.py  get_wandb_stats.py  preprocessing_data.py  train_encoder_only_model.py  train_model.py
src/mtl_cluster/cluster_related/data_structures/: cluster_input.py
src/mtl_cluster/cluster_related/metrics/: compute_n_clusters.py  internal_metrics.py
src/mtl_cluster/cluster_related/modules/: extract_latent_embeddings.py  table_concatenation_modification.py
src/mtl_cluster/common/: hydra.py  wand.py
src/mtl_cluster/config/: train.yaml
src/mtl_cluster/config/loggers/: wandb_config.yaml
src/mtl_cluster/data/: datamodule.py  dataset_instance.py  encoder_only_dataset.py  split.py
src/mtl_cluster/data/datasets/: __init__.py  anonymous_into_json.py  babe_into_json.py  constants.py  gwsd_into_json.py  mbic_into_json.py  structures_GAB.py  structures_babe_SG2.py
src/mtl_cluster/lightning_modules/: cluster.py
src/mtl_cluster/models/: models.py
src/mtl_cluster/modules/tokenise_split/: preprocess_split.py  tokenisers.py
storage/data/GWSTANCE/new/: GW_parsed.json
storage/data/model_data/test/: GWSD_test.pkl
storage/data/model_data/val/: GWSD_val.pkl
storage/data/modified/into_json/: gwsd_parsed.json
tests/: test_data_preparation.py  test_mtl_cluster.py
